--- a/Joomla/Template/css/template.css
+++ b/Joomla/Template/css/template.css
@@ -1059,6 +1059,7 @@ div.cat-children ul li dl dt, div.cat-children ul li dl dd {
     display:inline;
 	font-style: italic;
 }
+
 /* ===================== Category list =================== */
 table.category {
     font-size:1em;
@@ -1076,23 +1077,22 @@ table.category td {
 	padding-top: 5px;
 }
 table.category th img {
-    padding-left: 5px;
+	padding-left: 5px;
 }
+
 /* ===================== Login/Logout =================== */
 div.login fieldset {
-    border: 0;
+	border: 0;
 }
 div.login-fields {
-    margin: 10px 0 0 0;
+	margin: 10px 0 0 0;
 }
 
 div.login-fields label {
-    display: inline-block;
+	display: inline-block;
 	width:9em;
 }
-div.login-fields input#username,
-div.login-fields input#password
-{
+div.login-fields input#username, div.login-fields input#password {
 	width: 173px;
 }
 div.login fieldset button.button {
@@ -1105,18 +1105,18 @@ div.logout button.button {
 form#login-form fieldset {
     border:0;
 }
-form#login-form fieldset label{
+form#login-form fieldset label {
     display: inline-block;
 	width:9em;
 }
-form#login-form fieldset input#modlgn-passwd{
+form#login-form fieldset input#modlgn-passwd {
     width:131px;
 }
-form#login-form fieldset input#modlgn-username{
-    width:131px;
+form#login-form fieldset input#modlgn-username {
+	width: 131px;
 }
-/* =====================  User profile ===================== */
 
+/* =====================  User profile ===================== */
 #users-profile-core, #users-profile-custom {
     margin:10px 0 15px 0;
     padding:15px;
@@ -1159,8 +1159,13 @@ form#login-form fieldset input#modlgn-username{
 .profile-edit span.optional {
     font-size:0.9em;
 }
-.profile-edit #member-profile fieldset {    border: 1px solid #999;}
-div.profile fieldset{    border: 1px solid #999;}
+.profile-edit #member-profile fieldset {
+	border: 1px solid #999;
+}
+div.profile fieldset {
+	border: 1px solid #999;
+}
+
 /* =====================  Registration ===================== */
 div.registration form#member-registration fieldset {
 	margin:10px 0 15px 0;
@@ -1230,9 +1235,7 @@ dl.search-results dd.result-created {
 	font-size: 0.8em;
 	color: #889;
 }
-div.search form#searchForm fieldset.word,
-div.search form#searchForm fieldset.phrases,
-div.search form#searchForm fieldset.only {
+div.search form#searchForm fieldset.word, div.search form#searchForm fieldset.phrases, div.search form#searchForm fieldset.only {
 	border: 1px solid #ccc;
 }
 div.search form#searchForm fieldset.word button.button {
@@ -1246,18 +1249,17 @@ div.search form#searchForm fieldset.phrases div.ordering-box{
 	margin-top: 5px;
 }
 dl.search-results dd.result-created {    color: #889;}
-div.search form#searchForm fieldset.word,
-div.search form#searchForm fieldset.phrases,
-div.search form#searchForm fieldset.only {    border: 1px solid #999;}
-
-.small{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 10px;
-    line-height:1.2;
+div.search form#searchForm fieldset.word, div.search form#searchForm fieldset.phrases, div.search form#searchForm fieldset.only {
+	border: 1px solid #999;
+}
+.small {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 10px;
+	line-height:1.2;
 	color:#889;
 }
-.highlight{
-    font-weight:bold;
+.highlight {
+	font-weight:bold;
 }
 /* =====================  Single Contact ===================== */
 .contact-name {	
